--- a/modules/_requestbuilder_.html
+++ b/modules/_requestbuilder_.html
@@ -106,7 +106,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L831">requestBuilder.ts:831</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L831">requestBuilder.ts:831</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -119,7 +119,7 @@
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
 							<ul class="tsd-type-parameters">
 								<li>
-									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span></h4>
+									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{ </span>ConditionExpression<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">aws.DynamoDB.ConditionExpression</span><span class="tsd-signature-symbol">; </span>ExpressionAttributeNames<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">aws.DynamoDB.ExpressionAttributeNameMap</span><span class="tsd-signature-symbol">; </span>ExpressionAttributeValues<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">aws.DynamoDB.ExpressionAttributeValueMap</span><span class="tsd-signature-symbol"> }</span></h4>
 								</li>
 							</ul>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -155,7 +155,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L848">requestBuilder.ts:848</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L848">requestBuilder.ts:848</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -170,7 +170,7 @@
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
 							<ul class="tsd-type-parameters">
 								<li>
-									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span></h4>
+									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{ </span>ExpressionAttributeNames<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">aws.DynamoDB.ExpressionAttributeNameMap</span><span class="tsd-signature-symbol">; </span>ExpressionAttributeValues<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">aws.DynamoDB.ExpressionAttributeValueMap</span><span class="tsd-signature-symbol">; </span>FilterExpression<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">aws.DynamoDB.ConditionExpression</span><span class="tsd-signature-symbol"> }</span></h4>
 								</li>
 							</ul>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -206,7 +206,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L790">requestBuilder.ts:790</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L790">requestBuilder.ts:790</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -220,7 +220,7 @@
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
 							<ul class="tsd-type-parameters">
 								<li>
-									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span></h4>
+									<h4>T<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{ </span>ExpressionAttributeNames<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">aws.DynamoDB.ExpressionAttributeNameMap</span><span class="tsd-signature-symbol">; </span>ProjectionExpression<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">aws.DynamoDB.ProjectionExpression</span><span class="tsd-signature-symbol"> }</span></h4>
 								</li>
 							</ul>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -256,7 +256,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L572">requestBuilder.ts:572</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L572">requestBuilder.ts:572</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -293,7 +293,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L487">requestBuilder.ts:487</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L487">requestBuilder.ts:487</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -328,7 +328,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L527">requestBuilder.ts:527</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L527">requestBuilder.ts:527</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -363,7 +363,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L462">requestBuilder.ts:462</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L462">requestBuilder.ts:462</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -398,7 +398,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L603">requestBuilder.ts:603</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L603">requestBuilder.ts:603</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -416,14 +416,14 @@
 									</div>
 								</li>
 								<li>
-									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> readCapacity: <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;1</span></h5>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> readCapacity: <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 1</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>Represents one strongly consistent read per second, or two
 										eventually consistent reads per second, for an item up to 4 KB in size.</p>
 									</div>
 								</li>
 								<li>
-									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> writeCapacity: <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;1</span></h5>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> writeCapacity: <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 1</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>Represents one write per second for an item up to 1 KB in size.</p>
 									</div>
@@ -444,7 +444,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L332">requestBuilder.ts:332</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L332">requestBuilder.ts:332</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -482,7 +482,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L738">requestBuilder.ts:738</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L738">requestBuilder.ts:738</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -512,7 +512,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L92">requestBuilder.ts:92</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L92">requestBuilder.ts:92</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -553,7 +553,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L115">requestBuilder.ts:115</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L115">requestBuilder.ts:115</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -591,7 +591,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L372">requestBuilder.ts:372</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L372">requestBuilder.ts:372</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -645,7 +645,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L29">requestBuilder.ts:29</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L29">requestBuilder.ts:29</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -681,7 +681,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L438">requestBuilder.ts:438</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L438">requestBuilder.ts:438</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -726,7 +726,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L561">requestBuilder.ts:561</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L561">requestBuilder.ts:561</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -757,7 +757,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L181">requestBuilder.ts:181</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L181">requestBuilder.ts:181</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -804,7 +804,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/requestBuilder.ts#L757">requestBuilder.ts:757</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/requestBuilder.ts#L757">requestBuilder.ts:757</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -834,40 +834,46 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_condition_.html">"<wbr>Condition"</a>
+						<a href="_condition_.html">&quot;<wbr>Condition&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
+						<a href="_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
+						<a href="_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
+						<a href="_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_batchhelper_.html">"batch<wbr>Helper"</a>
+						<a href="_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
+						<a href="_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
+						<a href="_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_index_.html">"index"</a>
+						<a href="_index_.html">&quot;index&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_requestbuilder_.html">"request<wbr>Builder"</a>
+						<a href="_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
+						<a href="_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
+						<a href="_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_validation_.html">"validation"</a>
+						<a href="_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_validation_.html">&quot;validation&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -944,6 +950,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -992,7 +999,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
