--- a/globals.html
+++ b/globals.html
@@ -54,7 +54,7 @@
 					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1> Dynameh</h1>
+			<h1>Dynameh</h1>
 		</div>
 	</div>
 </header>
@@ -68,18 +68,20 @@
 						<section class="tsd-index-section ">
 							<h3>External modules</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-external-module"><a href="modules/_condition_.html" class="tsd-kind-icon">"<wbr>Condition"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_scopeddynameh_.html" class="tsd-kind-icon">"<wbr>Scoped<wbr>Dynameh"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_tableschema_.html" class="tsd-kind-icon">"<wbr>Table<wbr>Schema"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_updateexpressionaction_.html" class="tsd-kind-icon">"<wbr>Update<wbr>Expression<wbr>Action"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_batchhelper_.html" class="tsd-kind-icon">"batch<wbr>Helper"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_concurrenthelper_.html" class="tsd-kind-icon">"concurrent<wbr>Helper"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_dynamodbreservedwords_.html" class="tsd-kind-icon">"dynamo<wbr>DbReserved<wbr>Words"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_index_.html" class="tsd-kind-icon">"index"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_requestbuilder_.html" class="tsd-kind-icon">"request<wbr>Builder"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_requestunwrapper_.html" class="tsd-kind-icon">"request<wbr>Unwrapper"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_responseunwrapper_.html" class="tsd-kind-icon">"response<wbr>Unwrapper"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_validation_.html" class="tsd-kind-icon">"validation"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_condition_.html" class="tsd-kind-icon">&quot;<wbr>Condition&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_scopeddynameh_.html" class="tsd-kind-icon">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_tableschema_.html" class="tsd-kind-icon">&quot;<wbr>Table<wbr>Schema&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_updateexpressionaction_.html" class="tsd-kind-icon">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_batchhelper_.html" class="tsd-kind-icon">&quot;batch<wbr>Helper&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_concurrenthelper_.html" class="tsd-kind-icon">&quot;concurrent<wbr>Helper&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_dynamodbreservedwords_.html" class="tsd-kind-icon">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_index_.html" class="tsd-kind-icon">&quot;index&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_queryhelper_.html" class="tsd-kind-icon">&quot;query<wbr>Helper&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_requestbuilder_.html" class="tsd-kind-icon">&quot;request<wbr>Builder&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_requestunwrapper_.html" class="tsd-kind-icon">&quot;request<wbr>Unwrapper&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_responseunwrapper_.html" class="tsd-kind-icon">&quot;response<wbr>Unwrapper&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_scanhelper_.html" class="tsd-kind-icon">&quot;scan<wbr>Helper&quot;</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_validation_.html" class="tsd-kind-icon">&quot;validation&quot;</a></li>
 							</ul>
 						</section>
 					</div>
@@ -93,40 +95,46 @@
 						<a href="globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_condition_.html">"<wbr>Condition"</a>
+						<a href="modules/_condition_.html">&quot;<wbr>Condition&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
+						<a href="modules/_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
+						<a href="modules/_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
+						<a href="modules/_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_batchhelper_.html">"batch<wbr>Helper"</a>
+						<a href="modules/_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
+						<a href="modules/_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
+						<a href="modules/_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_index_.html">"index"</a>
+						<a href="modules/_index_.html">&quot;index&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_requestbuilder_.html">"request<wbr>Builder"</a>
+						<a href="modules/_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
+						<a href="modules/_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
+						<a href="modules/_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_validation_.html">"validation"</a>
+						<a href="modules/_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="modules/_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="modules/_validation_.html">&quot;validation&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -149,6 +157,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -197,7 +206,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="assets/js/main.js"></script>
