--- a/modules/_index_.html
+++ b/modules/_index_.html
@@ -69,12 +69,110 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
+							<h3>References</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#condition" class="tsd-kind-icon">Condition</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#scopeddynameh" class="tsd-kind-icon">Scoped<wbr>Dynameh</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#tableschema" class="tsd-kind-icon">Table<wbr>Schema</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#updateexpressionaction" class="tsd-kind-icon">Update<wbr>Expression<wbr>Action</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#updateexpressionlistappend" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Append</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#updateexpressionlistprepend" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Prepend</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#updateexpressionlistremoveatindex" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Remove<wbr>AtIndex</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#updateexpressionlistsetatindex" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Set<wbr>AtIndex</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#updateexpressionnumberadd" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Add</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#updateexpressionnumbersubtract" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Subtract</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#updateexpressionput" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#updateexpressionputifnotexists" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put<wbr>IfNot<wbr>Exists</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#updateexpressionremove" class="tsd-kind-icon">Update<wbr>Expression<wbr>Remove</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#updateexpressionsetadd" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Add</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#updateexpressionsetdelete" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Delete</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_index_.html#scope" class="tsd-kind-icon">scope</a></li>
 							</ul>
 						</section>
 					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
+				<h2>References</h2>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="condition" class="tsd-anchor"></a>
+					<h3>Condition</h3>
+					Re-exports <a href="../interfaces/_condition_.condition.html">Condition</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="scopeddynameh" class="tsd-anchor"></a>
+					<h3>Scoped<wbr>Dynameh</h3>
+					Re-exports <a href="../interfaces/_scopeddynameh_.scopeddynameh.html">ScopedDynameh</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="tableschema" class="tsd-anchor"></a>
+					<h3>Table<wbr>Schema</h3>
+					Re-exports <a href="../interfaces/_tableschema_.tableschema.html">TableSchema</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="updateexpressionaction" class="tsd-anchor"></a>
+					<h3>Update<wbr>Expression<wbr>Action</h3>
+					Re-exports <a href="_updateexpressionaction_.html#updateexpressionaction">UpdateExpressionAction</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="updateexpressionlistappend" class="tsd-anchor"></a>
+					<h3>Update<wbr>Expression<wbr>List<wbr>Append</h3>
+					Re-exports <a href="../interfaces/_updateexpressionaction_.updateexpressionlistappend.html">UpdateExpressionListAppend</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="updateexpressionlistprepend" class="tsd-anchor"></a>
+					<h3>Update<wbr>Expression<wbr>List<wbr>Prepend</h3>
+					Re-exports <a href="../interfaces/_updateexpressionaction_.updateexpressionlistprepend.html">UpdateExpressionListPrepend</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="updateexpressionlistremoveatindex" class="tsd-anchor"></a>
+					<h3>Update<wbr>Expression<wbr>List<wbr>Remove<wbr>AtIndex</h3>
+					Re-exports <a href="../interfaces/_updateexpressionaction_.updateexpressionlistremoveatindex.html">UpdateExpressionListRemoveAtIndex</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="updateexpressionlistsetatindex" class="tsd-anchor"></a>
+					<h3>Update<wbr>Expression<wbr>List<wbr>Set<wbr>AtIndex</h3>
+					Re-exports <a href="../interfaces/_updateexpressionaction_.updateexpressionlistsetatindex.html">UpdateExpressionListSetAtIndex</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="updateexpressionnumberadd" class="tsd-anchor"></a>
+					<h3>Update<wbr>Expression<wbr>Number<wbr>Add</h3>
+					Re-exports <a href="../interfaces/_updateexpressionaction_.updateexpressionnumberadd.html">UpdateExpressionNumberAdd</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="updateexpressionnumbersubtract" class="tsd-anchor"></a>
+					<h3>Update<wbr>Expression<wbr>Number<wbr>Subtract</h3>
+					Re-exports <a href="../interfaces/_updateexpressionaction_.updateexpressionnumbersubtract.html">UpdateExpressionNumberSubtract</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="updateexpressionput" class="tsd-anchor"></a>
+					<h3>Update<wbr>Expression<wbr>Put</h3>
+					Re-exports <a href="../interfaces/_updateexpressionaction_.updateexpressionput.html">UpdateExpressionPut</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="updateexpressionputifnotexists" class="tsd-anchor"></a>
+					<h3>Update<wbr>Expression<wbr>Put<wbr>IfNot<wbr>Exists</h3>
+					Re-exports <a href="../interfaces/_updateexpressionaction_.updateexpressionputifnotexists.html">UpdateExpressionPutIfNotExists</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="updateexpressionremove" class="tsd-anchor"></a>
+					<h3>Update<wbr>Expression<wbr>Remove</h3>
+					Re-exports <a href="../interfaces/_updateexpressionaction_.updateexpressionremove.html">UpdateExpressionRemove</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="updateexpressionsetadd" class="tsd-anchor"></a>
+					<h3>Update<wbr>Expression<wbr>Set<wbr>Add</h3>
+					Re-exports <a href="../interfaces/_updateexpressionaction_.updateexpressionsetadd.html">UpdateExpressionSetAdd</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="updateexpressionsetdelete" class="tsd-anchor"></a>
+					<h3>Update<wbr>Expression<wbr>Set<wbr>Delete</h3>
+					Re-exports <a href="../interfaces/_updateexpressionaction_.updateexpressionsetdelete.html">UpdateExpressionSetDelete</a>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
@@ -89,7 +187,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/index.ts#L22">index.ts:22</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/index.ts#L24">index.ts:24</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -119,45 +217,96 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_condition_.html">"<wbr>Condition"</a>
+						<a href="_condition_.html">&quot;<wbr>Condition&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
+						<a href="_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
+						<a href="_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
+						<a href="_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_batchhelper_.html">"batch<wbr>Helper"</a>
+						<a href="_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
+						<a href="_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
+						<a href="_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_index_.html">"index"</a>
+						<a href="_index_.html">&quot;index&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_requestbuilder_.html">"request<wbr>Builder"</a>
+						<a href="_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
+						<a href="_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
+						<a href="_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_validation_.html">"validation"</a>
+						<a href="_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_validation_.html">&quot;validation&quot;</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#condition" class="tsd-kind-icon">Condition</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#scopeddynameh" class="tsd-kind-icon">Scoped<wbr>Dynameh</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#tableschema" class="tsd-kind-icon">Table<wbr>Schema</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#updateexpressionaction" class="tsd-kind-icon">Update<wbr>Expression<wbr>Action</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#updateexpressionlistappend" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Append</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#updateexpressionlistprepend" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Prepend</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#updateexpressionlistremoveatindex" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Remove<wbr>AtIndex</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#updateexpressionlistsetatindex" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Set<wbr>AtIndex</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#updateexpressionnumberadd" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Add</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#updateexpressionnumbersubtract" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Subtract</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#updateexpressionput" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#updateexpressionputifnotexists" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put<wbr>IfNot<wbr>Exists</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#updateexpressionremove" class="tsd-kind-icon">Update<wbr>Expression<wbr>Remove</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#updateexpressionsetadd" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Add</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#updateexpressionsetdelete" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Delete</a>
+					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_index_.html#scope" class="tsd-kind-icon">scope</a>
 					</li>
@@ -178,6 +327,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -226,7 +376,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
