--- a/modules/_scanhelper_.html
+++ b/modules/_scanhelper_.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>UpdateExpressionListRemoveAtIndex | Dynameh</title>
+	<title>&quot;scanHelper&quot; | Dynameh</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,99 +54,106 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/_updateexpressionaction_.html">&quot;UpdateExpressionAction&quot;</a>
-				</li>
-				<li>
-					<a href="_updateexpressionaction_.updateexpressionlistremoveatindex.html">UpdateExpressionListRemoveAtIndex</a>
+					<a href="_scanhelper_.html">&quot;scanHelper&quot;</a>
 				</li>
 			</ul>
-			<h1>Interface UpdateExpressionListRemoveAtIndex</h1>
+			<h1>External module &quot;scanHelper&quot;</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<section class="tsd-panel tsd-comment">
-				<div class="tsd-comment tsd-typography">
-					<div class="lead">
-						<p>Remove an element at the index of an existing list and
-						shift the rest down.</p>
-					</div>
-				</div>
-			</section>
-			<section class="tsd-panel tsd-hierarchy">
-				<h3>Hierarchy</h3>
-				<ul class="tsd-hierarchy">
-					<li>
-						<span class="target">UpdateExpressionListRemoveAtIndex</span>
-					</li>
-				</ul>
-			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Properties</h3>
+							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_updateexpressionaction_.updateexpressionlistremoveatindex.html#action" class="tsd-kind-icon">action</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_updateexpressionaction_.updateexpressionlistremoveatindex.html#attribute" class="tsd-kind-icon">attribute</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_updateexpressionaction_.updateexpressionlistremoveatindex.html#index" class="tsd-kind-icon">index</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_scanhelper_.html#scanall" class="tsd-kind-icon">scan<wbr>All</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_scanhelper_.html#scancountall" class="tsd-kind-icon">scan<wbr>Count<wbr>All</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="action" class="tsd-anchor"></a>
-					<h3>action</h3>
-					<div class="tsd-signature tsd-kind-icon">action<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"list_remove_at_index"</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/UpdateExpressionAction.ts#L206">UpdateExpressionAction.ts:206</a></li>
-						</ul>
-					</aside>
+				<h2>Functions</h2>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="scanall" class="tsd-anchor"></a>
+					<h3>scan<wbr>All</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">scan<wbr>All<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DynamoDB</span>, req<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">ScanInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/scanHelper.ts#L9">scanHelper.ts:9</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Paginate through a scan to collect all results.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>dynamodb: <span class="tsd-signature-type">DynamoDB</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The DynamoDB client instance to use.</p>
+									</div>
+								</li>
+								<li>
+									<h5>req: <span class="tsd-signature-type">ScanInput</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The scan input.</p>
+									</div>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="attribute" class="tsd-anchor"></a>
-					<h3>attribute</h3>
-					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/UpdateExpressionAction.ts#L215">UpdateExpressionAction.ts:215</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>The attribute name to update.  Nested attributes
-								can be accessed using dot notation; for example <code>a.b.c</code>.  Attribute
-								names with literal dots should escape them with a backslash; for
-							example <code>a\.b\.c</code>.</p>
-						</div>
-						<dl class="tsd-comment-tags">
-							<dt>see</dt>
-							<dd><p><a href="https://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Expressions.Attributes.html">https://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Expressions.Attributes.html</a></p>
-							</dd>
-						</dl>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="index" class="tsd-anchor"></a>
-					<h3>index</h3>
-					<div class="tsd-signature tsd-kind-icon">index<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/UpdateExpressionAction.ts#L220">UpdateExpressionAction.ts:220</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>The index of the item in the list.  A number.</p>
-						</div>
-					</div>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="scancountall" class="tsd-anchor"></a>
+					<h3>scan<wbr>Count<wbr>All</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">scan<wbr>Count<wbr>All<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DynamoDB</span>, req<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">ScanInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/scanHelper.ts#L28">scanHelper.ts:28</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Paginate through a scan to count all results.  This is more efficient than <code>scanAll()</code>
+									when only the count is needed.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>dynamodb: <span class="tsd-signature-type">DynamoDB</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The DynamoDB client instance to use.</p>
+									</div>
+								</li>
+								<li>
+									<h5>req: <span class="tsd-signature-type">ScanInput</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The scan input.</p>
+									</div>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
 				</section>
 			</section>
 		</div>
@@ -157,101 +164,56 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_condition_.html">&quot;<wbr>Condition&quot;</a>
+						<a href="_condition_.html">&quot;<wbr>Condition&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
+						<a href="_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
+						<a href="_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_index_.html">&quot;index&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="../modules/_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
+						<a href="_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_index_.html">&quot;index&quot;</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_validation_.html">&quot;validation&quot;</a>
+						<a href="_validation_.html">&quot;validation&quot;</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionlistappend.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Append</a>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_scanhelper_.html#scanall" class="tsd-kind-icon">scan<wbr>All</a>
 					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionlistprepend.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Prepend</a>
-					</li>
-				</ul>
-				<ul class="current">
-					<li class="current tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionlistremoveatindex.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Remove<wbr>AtIndex</a>
-						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_updateexpressionaction_.updateexpressionlistremoveatindex.html#action" class="tsd-kind-icon">action</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_updateexpressionaction_.updateexpressionlistremoveatindex.html#attribute" class="tsd-kind-icon">attribute</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_updateexpressionaction_.updateexpressionlistremoveatindex.html#index" class="tsd-kind-icon">index</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-				<ul class="after-current">
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionlistsetatindex.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Set<wbr>AtIndex</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionnumberadd.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Add</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionnumbersubtract.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Subtract</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionput.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionputifnotexists.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put<wbr>IfNot<wbr>Exists</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionremove.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Remove</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionsetadd.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Add</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionsetdelete.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Delete</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
-						<a href="../modules/_updateexpressionaction_.html#updateexpressionaction" class="tsd-kind-icon">Update<wbr>Expression<wbr>Action</a>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_scanhelper_.html#scancountall" class="tsd-kind-icon">scan<wbr>Count<wbr>All</a>
 					</li>
 				</ul>
 			</nav>
