--- a/modules/_updateexpressionaction_.html
+++ b/modules/_updateexpressionaction_.html
@@ -101,7 +101,7 @@
 					<div class="tsd-signature tsd-kind-icon">Update<wbr>Expression<wbr>Action<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_updateexpressionaction_.updateexpressionput.html" class="tsd-signature-type">UpdateExpressionPut</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionputifnotexists.html" class="tsd-signature-type">UpdateExpressionPutIfNotExists</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionremove.html" class="tsd-signature-type">UpdateExpressionRemove</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionnumberadd.html" class="tsd-signature-type">UpdateExpressionNumberAdd</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionnumbersubtract.html" class="tsd-signature-type">UpdateExpressionNumberSubtract</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionlistappend.html" class="tsd-signature-type">UpdateExpressionListAppend</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionlistprepend.html" class="tsd-signature-type">UpdateExpressionListPrepend</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionlistsetatindex.html" class="tsd-signature-type">UpdateExpressionListSetAtIndex</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionlistremoveatindex.html" class="tsd-signature-type">UpdateExpressionListRemoveAtIndex</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionsetadd.html" class="tsd-signature-type">UpdateExpressionSetAdd</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionsetdelete.html" class="tsd-signature-type">UpdateExpressionSetDelete</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/UpdateExpressionAction.ts#L20">UpdateExpressionAction.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/UpdateExpressionAction.ts#L20">UpdateExpressionAction.ts:20</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -133,40 +133,46 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_condition_.html">"<wbr>Condition"</a>
+						<a href="_condition_.html">&quot;<wbr>Condition&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
+						<a href="_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
+						<a href="_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
+						<a href="_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_batchhelper_.html">"batch<wbr>Helper"</a>
+						<a href="_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
+						<a href="_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
+						<a href="_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_index_.html">"index"</a>
+						<a href="_index_.html">&quot;index&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_requestbuilder_.html">"request<wbr>Builder"</a>
+						<a href="_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
+						<a href="_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
+						<a href="_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_validation_.html">"validation"</a>
+						<a href="_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_validation_.html">&quot;validation&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -225,6 +231,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -273,7 +280,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
