--- a/modules/_validation_.html
+++ b/modules/_validation_.html
@@ -104,7 +104,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Condition<wbr>Operator<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;&gt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"BETWEEN"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"IN"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"attribute_exists"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"attribute_not_exists"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"attribute_type"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"begins_with"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"contains"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"size"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L8">validation.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L8">validation.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -114,7 +114,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Key<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L4">validation.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L4">validation.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +124,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Key<wbr>Pair<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">[</span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">, </span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L5">validation.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L5">validation.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -134,7 +134,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Query<wbr>Condition<wbr>Operator<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"BETWEEN"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"begins_with"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L6">validation.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L6">validation.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -151,7 +151,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L181">validation.ts:181</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L181">validation.ts:181</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -165,7 +165,7 @@
 									<h5>condition: <a href="../interfaces/_condition_.condition.html" class="tsd-signature-type">Condition</a></h5>
 								</li>
 								<li>
-									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> operatorSet: <span class="tsd-signature-type">"default"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"query"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;default&quot;</span></h5>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> operatorSet: <span class="tsd-signature-type">"default"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"query"</span><span class="tsd-signature-symbol"> = &quot;default&quot;</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -182,7 +182,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L224">validation.ts:224</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L224">validation.ts:224</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -196,7 +196,7 @@
 									<h5>conditions: <a href="../interfaces/_condition_.condition.html" class="tsd-signature-type">Condition</a><span class="tsd-signature-symbol">[]</span></h5>
 								</li>
 								<li>
-									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> operatorSet: <span class="tsd-signature-type">"default"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"query"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;default&quot;</span></h5>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> operatorSet: <span class="tsd-signature-type">"default"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"query"</span><span class="tsd-signature-symbol"> = &quot;default&quot;</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -213,7 +213,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L26">validation.ts:26</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L26">validation.ts:26</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -236,7 +236,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L139">validation.ts:139</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L139">validation.ts:139</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -253,7 +253,7 @@
 									<h5>item: <span class="tsd-signature-type">object</span></h5>
 								</li>
 								<li>
-									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> paramName: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;the object&quot;</span></h5>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> paramName: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;the object&quot;</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -270,7 +270,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L169">validation.ts:169</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L169">validation.ts:169</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -301,7 +301,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L56">validation.ts:56</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L56">validation.ts:56</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -335,7 +335,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L106">validation.ts:106</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L106">validation.ts:106</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -366,7 +366,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L72">validation.ts:72</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L72">validation.ts:72</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -397,7 +397,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L89">validation.ts:89</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L89">validation.ts:89</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -428,7 +428,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L270">validation.ts:270</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L270">validation.ts:270</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -456,7 +456,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/d20d9fb/src/validation.ts#L242">validation.ts:242</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/17c9223/src/validation.ts#L242">validation.ts:242</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -483,40 +483,46 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_condition_.html">"<wbr>Condition"</a>
+						<a href="_condition_.html">&quot;<wbr>Condition&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
+						<a href="_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
+						<a href="_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
+						<a href="_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_batchhelper_.html">"batch<wbr>Helper"</a>
+						<a href="_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
+						<a href="_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
+						<a href="_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_index_.html">"index"</a>
+						<a href="_index_.html">&quot;index&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_requestbuilder_.html">"request<wbr>Builder"</a>
+						<a href="_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
+						<a href="_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
+						<a href="_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_validation_.html">"validation"</a>
+						<a href="_validation_.html">&quot;validation&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -584,6 +590,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -632,7 +639,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
